<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_server"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_server"
        android:inputType="textUri" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_port"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_port"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_pass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_pass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_cmdpre"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_cmdpre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_cmdpost"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_cmdpost" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/config_cmddelay"
        android:layout_gravity="center_horizontal"
        android:hint="@string/config_cmddelay"
        android:inputType="number" />

    <Button
        android:id="@+id/config_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_ok"
        />
</LinearLayout>